[package]
name = "calc-language"
version = "0.1.0"
authors = ["Nuno Barreto <nbarreto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cfg-if = "0.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
pest = "2.1"
pest_derive = "2.1"
rustyline = "6.2"
